# rlrenamer

./: CHANGES.md  CMakeLists.txt  README.md  macro_test_db.tsv  rename_report.tsv  rlrenamer - README.md  symbols.db.tsv  test_macro_symbols.txt
src/: consumer_heuristics.cpp  consumer_heuristics.h  fs_utils.cpp  fs_utils.h  lexer.cpp  lexer.h  main.cpp  multi_round_strict.cpp  multi_round_strict.h  raylib_api_extract.cpp  raylib_api_extract.h
tests/: test_basic.cpp
